@@ -21,6 +21,7 @@ import Data.String.Utils
 import BackendClass
 import LocationLog
 import qualified Remote
+import qualified RemoteUtils
 import qualified GitRepo as Git
 import Content
 import qualified Annex
@@ -53,7 +54,7 @@ dummyStore _ _ = return True
  - and copy it to here. -}
 copyKeyFile :: Key -> FilePath -> Annex Bool
 copyKeyFile key file = do
-	(remotes, _) <- Remote.keyPossibilities key
+	(remotes, _) <- RemoteUtils.keyPossibilities key
 	if null remotes
 		then do
 			showNote "not available"
@@ -96,7 +97,7 @@ checkRemoveKey key numcopiesM = do
 	if force || numcopiesM == Just 0
 		then return True
 		else do
-			(remotes, trusteduuids) <- Remote.keyPossibilities key
+			(remotes, trusteduuids) <- RemoteUtils.keyPossibilities key
 			untrusteduuids <- trustGet UnTrusted
 			let tocheck = Remote.remotesWithoutUUID remotes (trusteduuids++untrusteduuids)
 			numcopies <- getNumCopies numcopiesM
