@@ -16,6 +16,7 @@ import LocationLog
 import Types
 import Content
 import qualified Remote
+import qualified RemoteUtils
 import UUID
 import Messages
 
@@ -89,7 +90,7 @@ toPerform dest move key = do
 	let fastcheck = fast && not move && not (Remote.hasKeyCheap dest)
 	isthere <- if fastcheck
 		then do
-			(remotes, _) <- Remote.keyPossibilities key
+			(remotes, _) <- RemoteUtils.keyPossibilities key
 			return $ Right $ dest `elem` remotes
 		else Remote.hasKey dest key
 	case isthere of
@@ -123,7 +124,7 @@ fromStart :: Remote.Remote Annex -> Bool -> CommandStartString
 fromStart src move file = isAnnexed file $ \(key, _) -> do
 	g <- Annex.gitRepo
 	u <- getUUID g
-	(remotes, _) <- Remote.keyPossibilities key
+	(remotes, _) <- RemoteUtils.keyPossibilities key
 	if (u == Remote.uuid src) || (null $ filter (== src) remotes)
 		then stop
 		else do
