@@ -359,6 +359,14 @@ Many git-annex commands will stage changes for later `git commit` by you.
   Overrides the `annex.numcopies` setting, forcing git-annex to ensure the
   specified number of copies exist.
 
+* --trust=repository
+* --semitrust=repository
+* --untrust=repository
+
+  Overrides trust settings for a repository. May be specified more than once.
+  
+  The repository should be specified using the name of a configured remote.
+
 * --backend=name
 
   Specifies which key-value backend to use. This can be used when
