@@ -1,6 +1,7 @@
 git-annex (0.20110602) UNRELEASED; urgency=low
 
   * Add --numcopies option.
+  * Add --trust, --untrust, and --semitrust options.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 01 Jun 2011 16:26:48 -0400
 
